salesforce/force-app/main/default/objects/RemediationRecipe__mdt/RemediationRecipe__mdt.object-meta.xml
<CustomObject>
    <description>Phase 16b — One record per OrgPrism detector. Stores the remediation recipe template that RemediationRecipeService interpolates against finding metadata at scan time.</description>
    <label>Remediation Recipe</label>
    <pluralLabel>Remediation Recipes</pluralLabel>
</CustomObject>