salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <description>OrgPrism detector identifier this recipe applies to (e.g. REN-001).</description>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>