salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/EstimatedEffort__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEffort__c</fullName>
    <label>Estimated Effort</label>
    <description>Human-readable effort estimate, e.g. "30 min" or "1-2 hours".</description>
    <type>Text</type>
    <length>40</length>
</CustomField>