salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/NoteSuggestion1__c.field-meta.xml
<CustomField>
    <fullName>NoteSuggestion1__c</fullName>
    <label>Note Suggestion 1</label>
    <description>Suggested consultant note shown as a clickable chip above the Finding Notes textarea. Empty means no chip rendered.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>