salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill Required</label>
    <description>Role / capability needed to action this recipe (e.g. CPQ Admin, Billing Admin, Sysadmin).</description>
    <type>Text</type>
    <length>40</length>
</CustomField>