salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <label>Steps (numbered)</label>
    <description>Newline-separated remediation steps. Supports {placeholder} tokens that resolve against finding metadata.</description>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>