salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Recipe Title</label>
    <description>Short imperative phrase shown as the recipe heading. Supports {placeholder} tokens.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>