salesforce/force-app/main/default/objects/RemediationRecipe__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>Recipe revision number. Bump when you edit so consumers can detect freshness.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>